[package]
name = "bleyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = { version = "1", optional = true }
tokio = { version = "1", features = ["io-std", "time", "io-util", "rt-multi-thread"] }
tokio-stream = { version = "0.1", optional = true }
bluer = { version = "0.15.0", features = [ "bluetoothd" ] }
futures = "0.3"
dbus = { version = "0.9", features = ["futures"], optional = true }
dbus-tokio = { version = "0.7", optional = true }
dbus-crossroads = { version = "0.5", optional = true }
lazy_static = { version = "1", optional = true }
custom_debug = { version = "0.5", optional = true }
displaydoc = { version = "0.2", optional = true }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
syslog = "5.0.0"
ansi_term = "0.12.1"
